syntax = "proto3";
package auth;
option go_package = "github.com/EugeneNail/grpc/gen/auth";

service Auth {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  int64 id = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
}


message LogoutRequest {
  
}
message LogoutResponse {}

message RefreshRequest {}
message RefreshResponse {}
